# lakegen_demo

./: .gitignore  README.md  blend  chainlit.md  config_paths.json  datasets_list.txt  fix_indent2.py  main.py  pyproject.toml  run_test.py  start.sh  test_agent_events.py  test_capture.py  test_events.py  test_llm_event.py  test_repr.py  test_solr3.py  test_thinking_capture.py
.chainlit/: config.toml
Data/: temp_blend_3573f5a1072f4c2b886fec53677443a5.db
backend/: lakegen.py  process_ckan.py
blend/: DBHandler.py  Plan.py  blend.py  utils.py
ckan/: __init__.py  canada.py  ckan.py  uk.py
coding/: script.py
config/: config.yaml
frontend/: app.py  chainlit.md  tools.py  utils.py  vector_db.py
join_search_exp/: test.ipynb  test.py
logs/: experiments_log.csv  experiments_log.txt  experiments_log_0.csv  experiments_log_0.txt  experiments_log_1.csv  experiments_log_1.txt  experiments_log_2.csv  experiments_log_2.txt  experiments_log_3.csv  experiments_log_3.txt  experiments_log_4.csv  experiments_log_4.txt  experiments_log_gemma.csv  experiments_log_gemma.txt  experiments_log_qwen.csv  experiments_log_qwen.txt  gpt-oss_log.txt
notebooks/: prompt_learning.ipynb  prompt_learning.py  row_sample.py
prompts/: agents_config.yaml  code_generator.yaml  data_architect.yaml  keyword_generator.yaml  prompt_manager.py  synthesizer.yaml
public/: test.css
queries/: generated_queries_bologna.json  generated_queries_new_york.json  generated_queries_paris.json  generated_queries_valencia.json  selected_query.txt
questions/: generated_queries_paris.json
sloth/: sloth.py  (+1 more)
(+147 files in other folders)
