[tool.poetry]
name = "lakegen"
version = "0.1.0"
description = ""
authors = ["Angelo Mozzillo <amozzillo@doxee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
notebook = "^7.3.1"
ipykernel = "^6.29.5"
numpy = "^1.22.4"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
polars = "^1.17.1"
tqdm = "^4.67.1"
langchain = "^0.3.11"
langchain-ollama = "^0.2.1"
langchain-community = "^0.3.11"
langchain-groq = "^0.2.1"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
autogen-agentchat = ">=0.2,<1.0"
flaml = "^2.3.2"
litellm = {extras = ["proxy"], version = "^1.63.11"}
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
datasketch = "^1.6.5"
pyautogen = "^0.7.5"
dotenv = "^0.9.9"
autogen-ext = "^0.4.9.2"
chardet = "^5.2.0"
streamlit = "^1.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
